--- a/networkinfo/requirements.txt
+++ b/networkinfo/requirements.txt
@@ -1,13 +1,24 @@
 asgiref==3.4.1
+bcrypt==3.2.0
+cffi==1.15.0
+cryptography==35.0.0
 Django==3.2.9
 django-environ==0.8.1
 django-mssql-backend==2.8.1
 gunicorn==20.1.0
 ldap3==2.9.1
 mssql-django==1.0
+mysql-connector==2.2.9
+paramiko==2.8.0
 psycopg2==2.9.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.21
+PyNaCl==1.4.0
 pyodbc==4.0.32
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
+
+
+
