--- a/networkinfo/requirements.txt
+++ b/networkinfo/requirements.txt
@@ -10,7 +10,7 @@ ldap3==2.9.1
 mssql-django==1.0
 mysql-connector==2.2.9
 paramiko==2.8.0
-psycopg2-binary
+psycopg2==2.9.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
